# vk-web

./: backend.Dockerfile  docker-compose.local.yml  pyproject.toml
app/: application.py  models.py  settings.py
app/resources/: __init__.py  web.py
app/templates/: dark.css  form.html
app/ticket/: __init__.py  api.py  form.html  web.py
env_files/: general.env  postgres.env
